--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 aiofiles
-aiohttp==3.9.1
-asyncio==3.4.3
-beautifulsoup4==4.12.2
+aiohttp
+asyncio
+beautifulsoup4
 dnspython
 ffmpeg-python
 gitpython
 hachoir
 heroku3
-motor==3.3.2
-pillow==10.2.0
+motor
+pillow
 psutil
-py-tgcalls==0.9.2
+py-tgcalls==0.9.7
 pykeyboard
 pyrogram==2.0.106
 python-dotenv
 pyyaml
 requests
 speedtest-cli
-spotipy==2.23.0
+spotipy
 tgcrypto
 unidecode
-yt-dlp==2023.12.30
-youtube-search==2.1.2
-youtube-search-python==1.6.6
+yt-dlp
+youtube-search
+youtube-search-python
